# paperbridge

./: .gitignore  .opengrepignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  USAGE.md  config.example.toml  deny.toml  release-please-config.json  setup.sh
.artifacts/opengrep/: opengrep-paperbridge-default.json
.artifacts/opengrep/pre-commit/: opengrep-paperbridge-default.json  opengrep-paperbridge-default.sarif
.githooks/: opengrep-pre-commit  pre-commit
.github/workflows/: ci.yml  release.yml
Formula/: paperbridge.rb
crates/paperseed/: Cargo.toml  README.md
crates/paperseed-index/: Cargo.toml
crates/paperseed-index/src/: error.rs  index.rs  lib.rs  params.rs  tokenizer.rs
crates/paperseed/examples/: oa-paper.txt  paperbridge-item.json
crates/paperseed/src/: app.rs  cli.rs  corpus.rs  db.rs  error.rs  indexing.rs  lib.rs  main.rs  models.rs  policy.rs  resolver.rs  sources.rs  storage.rs  yams.rs
crates/paperseed/tests/: cli_errors.rs  cli_surface.rs  db.rs  pdf_extraction.rs  policy.rs  resolver.rs  sources.rs  storage.rs  yams.rs
crates/paperseed/tests/fixtures/: README.md
docs/: completions.md  papers.md  skill.md  structured-paper.md
docs/design/: README.md  cli-design.md  llm-interface-tasks.md  llm-interface.md
docs/dev/: opengrep.md
npm/: .gitignore
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-x64/: README.md  package.json
npm/paperbridge/: README.md  package.json
npm/win32-x64/: README.md  package.json
scripts/: update-formula-shas.sh
scripts/dev/: run_opengrep.sh
src/: backend.rs  chunking.rs  cli.rs  config.rs  crossref.rs  error.rs  hit_enrich.rs  lib.rs  main.rs  models.rs  paperseed_api.rs  pdf.rs  security.rs  server.rs  service.rs  skill.rs  update.rs  validation.rs  zotero_api.rs
src/backends/: cloud.rs  local.rs
src/paper/: docker.rs  fallback.rs  grobid.rs  mod.rs  selector.rs  tei.rs
tests/: cli_errors.rs  cli_surface.rs  golden_outputs.rs  paperseed_api.rs
tests/golden/: get_item.json  get_item_fulltext.json  get_pdf_text_cached_paper.json  list_collections.json  prepare_item_for_vox.json  prepare_search_result_for_vox.json  search_items.json
tools/opengrep/rules/audit/: paperbridge-audit.yml
tools/opengrep/rules/default/: paperbridge-rust.yml
