[package]
name = "paperbridge"
version = "0.4.0"
edition = "2024"
description = "MCP and CLI bridge for Zotero search and PDF/full-text retrieval"
license = "MIT"

[dependencies]
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
clap_complete = "4"
dirs = "6"
reqwest = { version = "0.12", features = ["json", "multipart"] }
rmcp = { version = "0.14", features = ["server", "transport-io", "macros"] }
schemars = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "process", "sync"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
urlencoding = "2"
quick-xml = { version = "0.36", features = ["serialize"] }

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
