[package]
name = "paperseed-index"
version = "1.0.0"
edition = "2024"
description = "BM25F index for the paperseed local paper corpus"
license = "MIT"

[dependencies]
bincode = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
unicode-normalization = "0.1"

[dev-dependencies]
tempfile = "3"
