[package]
name = "paperseed"
version = "0.8.0"
edition = "2024"
description = "Local-first scholarly corpus manager for lawful paper discovery, storage, indexing, and seeding"
license = "MIT"

[dependencies]
blake3 = "1"
clap = { version = "4", features = ["derive"] }
paperseed-index = { path = "../paperseed-index" }
pdf-extract = "0.10"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
urlencoding = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
tempfile = "3"
